unpackaged/main/default/objects/Module_Dependency__c/Module_Dependency__c.object-meta.xml
<CustomObject>
    <description>Lookup object for module dependencies</description>
    <label>Module Dependency</label>
    <nameField>
        <displayFormat>MD-{00000}</displayFormat>
        <label>Module Dependency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Module Dependencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>