unpackaged/main/default/objects/Module_Dependency__c/fields/Controlled_Module__c.field-meta.xml
<CustomField>
    <fullName>Controlled_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Controlled Module</description>
    <label>Controlled Module</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Category__c</field>
            <operation>equals</operation>
            <value>Module</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Module Dependencies (Controlled Module)</relationshipLabel>
    <relationshipName>Module_Dependencies1</relationshipName>
    <type>Lookup</type>
</CustomField>