unpackaged/main/default/objects/Module_Dependency__c/fields/Controlling_Module__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Controlling Module</description>
    <label>Controlling Module</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Product2.Category__c</field>
            <operation>equals</operation>
            <value>Module</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Module Dependencies</relationshipLabel>
    <relationshipName>Module_Dependencies</relationshipName>
    <type>Lookup</type>
</CustomField>