unpackaged/main/default/objects/Module_Dependency__c/fields/Product_Action__c.field-meta.xml
<CustomField>
    <fullName>Product_Action__c</fullName>
    <label>Product Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
            <value>
                <fullName>Enable</fullName>
            </value>
            <value>
                <fullName>Disable</fullName>
            </value>
            <value>
                <fullName>Enable &amp; Add</fullName>
            </value>
            <value>
                <fullName>Disable &amp; Remove</fullName>
            </value>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
            <value>
                <fullName>Show &amp; Add</fullName>
            </value>
            <value>
                <fullName>Hide &amp; Remove</fullName>
            </value>
            <value>
                <fullName>Default Filter</fullName>
            </value>
            <value>
                <fullName>Optional Filter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>