unpackaged/main/default/objects/Module_Dependency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Controlling_Module__c</columns>
    <columns>Controlled_Module__c</columns>
    <columns>Product_Action__c</columns>
    <columns>Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>